# opencl-wrapper

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: CLWrapperEnvironment.cmake  CLWrapperFunctions.cmake  CLWrapperVersion.cmake
externs/inc/CL/: cl.h  cl_ext.h  cl_platform.h
inc/: clext.h  clwrapper.h
src/: clext.cpp  clwrapper.cpp  main.cpp
